src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>SR_Sponsor_Mid__c</fullName>
        <label>SR Sponsor Mid</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Split_Time_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional 2nd contact for split time sponsor</inlineHelpText>
        <label>Split Time Sponsor Contct 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (Split Time Sponsor Contact 2)</relationshipLabel>
        <relationshipName>Students3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Time_Sponsor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split Time Sponsor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (Split Time Sponsor Contact)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Time_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split Time Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students (Split Time Sponsor)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Time_Transport__c</fullName>
        <formula>Split_Time_Sponsor__r.School_Transport__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the transportation route for the Split Time Sponsor.</inlineHelpText>
        <label>Split Time Transport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_time__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if student works at more than one sponsor.</inlineHelpText>
        <label>Split time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account_ID__c</fullName>
        <formula>Sponsor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional 2nd sponsor contact</inlineHelpText>
        <label>Sponsor Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (Sponsor Contact 2)</relationshipLabel>
        <relationshipName>Students2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional 3rd sponsor contact</inlineHelpText>
        <label>Sponsor Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (Sponsor Contact 3)</relationshipLabel>
        <relationshipName>Students4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (Sponsor Contact)</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Texas</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student_Account_Manager__c</fullName>
        <formula>Sponsor__r.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field for CWSP staff who owns Sponsor assigned to this student</inlineHelpText>
        <label>Student Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Cell_Phone__c</fullName>
        <label>Student Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <description>Student&apos;s email address</description>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Home_Phone__c</fullName>
        <label>Student Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Summer_Sponsor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student&apos;s Sponsor if worked during the summer</description>
        <label>Summer Sponsor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summer Students</relationshipLabel>
        <relationshipName>Students2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summer_Sponsor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summer Sponsor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summer Students</relationshipLabel>
        <relationshipName>Students3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summer_Sponsor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summer Sponsor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summer Students</relationshipLabel>
        <relationshipName>Students4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summer_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the student has worked in the summer.</description>
        <label>Summer Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transport__c</fullName>
        <formula>Sponsor__r.School_Transport__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportation</label>
        <referenceTo>Transportation__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Withdrawn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Withdrawn from CRJ?</description>
        <inlineHelpText>Check if student has withdrawn from CRJ.</inlineHelpText>
        <label>Withdrawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Day__c</fullName>
        <description>This is the day the student works each week.</description>
        <inlineHelpText>What day of the week does the student work?</inlineHelpText>
        <label>Work Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Incident__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the student have a work incident in his/her student file?</description>
        <inlineHelpText>Check if the student has had a negative work incident documented in his/her student file?</inlineHelpText>
        <label>Work Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Work_Day__c</columns>
        <columns>Class_Year__c</columns>
        <columns>PowerSchool_Number__c</columns>
        <columns>Sponsor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>